--- a/Pymaceuticals/pymaceuticals_starter-Current.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter-Current.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "249"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "60           62.570880                 2            2          2  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "[1888 rows x 8 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,25 +701,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-66-81866bec2010>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-66-81866bec2010>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    assert True cleaned_len = non_dup_len, \"Calculation correct!\"\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Checking the number of mice in the clean DataFrame.\n",
     "cleaned_len=len(cleaned_combined_df['Mouse ID'])\n",
     "\n",
     "#lenght we started from original merge of the lists, with duplicates subtracted\n",
     "non_dup_len= (study_len) - (tot_dup_count)\n",
-    "assert True cleaned_len = non_dup_len, \"Calculation correct!\"\n"
+    "\n",
+    "#  Assert statement to check correct number entries in dataframe with no duplicates.\n",
+    "assert cleaned_len == non_dup_len\n",
+    "\n",
+    "#cleaned_combined_df.to_csv('Cleaned Drug Data')  \n",
+    "\n"
    ]
   },
   {
@@ -731,12 +727,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Median Tumor Volume</th>\n",
+       "      <th>Tumor Volume Variance</th>\n",
+       "      <th>Tumor Volume STDev</th>\n",
+       "      <th>Tumor Volume SEM</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.393463</td>\n",
+       "      <td>50.909965</td>\n",
+       "      <td>43.138803</td>\n",
+       "      <td>6.568014</td>\n",
+       "      <td>0.525862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Tumor Volume (mm3)  Median Tumor Volume  Tumor Volume Variance  \\\n",
+       "Drug Regimen                                                                   \n",
+       "Capomulin              40.675741            41.557809              24.947764   \n",
+       "Ceftamin               52.591172            51.776157              39.290177   \n",
+       "Infubinol              52.884795            51.820584              43.128684   \n",
+       "Ketapril               55.235638            53.698743              68.553577   \n",
+       "Naftisol               54.331565            52.509285              66.173479   \n",
+       "Placebo                54.033581            52.288934              61.168083   \n",
+       "Propriva               52.393463            50.909965              43.138803   \n",
+       "Ramicane               40.216745            40.673236              23.486704   \n",
+       "Stelasyn               54.233149            52.431737              59.450562   \n",
+       "Zoniferol              53.236507            51.818479              48.533355   \n",
+       "\n",
+       "              Tumor Volume STDev  Tumor Volume SEM  \n",
+       "Drug Regimen                                        \n",
+       "Capomulin               4.994774          0.329346  \n",
+       "Ceftamin                6.268188          0.469821  \n",
+       "Infubinol               6.567243          0.492236  \n",
+       "Ketapril                8.279709          0.603860  \n",
+       "Naftisol                8.134708          0.596466  \n",
+       "Placebo                 7.821003          0.581331  \n",
+       "Propriva                6.568014          0.525862  \n",
+       "Ramicane                4.846308          0.320955  \n",
+       "Stelasyn                7.710419          0.573111  \n",
+       "Zoniferol               6.966589          0.516398  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "tumor_vol_stat = cleaned_combined_df.groupby(['Drug Regimen'])['Tumor Volume (mm3)']\n",
+    "drug_mean = pd.DataFrame(tumor_vol_stat.mean())\n",
     "\n",
+    "drug_median =tumor_vol_stat.median()\n",
+    "drug_var = tumor_vol_stat.var()\n",
+    "drug_std = tumor_vol_stat.std()\n",
+    "drug_sem = tumor_vol_stat.sem()\n",
+    "\n",
+    "\n",
+    "\n",
+    "drug_mean[\"Median Tumor Volume\"] = drug_median\n",
+    "drug_mean['Tumor Volume Variance']=drug_var\n",
+    "drug_mean['Tumor Volume STDev']=drug_std\n",
+    "drug_mean['Tumor Volume SEM'] = drug_sem\n",
+    "drug_mean.rename(columns={'Tumor Volume (mm3)': \"Tumor Volume Mean\"})\n",
+    "\n",
+    "drug_mean\n",
     "# This method is the most straightforward, creating multiple series and putting them all together at the end."
    ]
   },
@@ -750,6 +916,8 @@
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "\n",
+    "#Use groupby.agg function\n",
+    "\n",
     "# This method produces everything in a single groupby function."
    ]
   },
@@ -762,11 +930,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">0</th>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">45</th>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Mouse ID\n",
+       "Timepoint Drug Regimen          \n",
+       "0         Capomulin           25\n",
+       "          Ceftamin            25\n",
+       "          Infubinol           25\n",
+       "          Ketapril            25\n",
+       "          Naftisol            25\n",
+       "...                          ...\n",
+       "45        Placebo             11\n",
+       "          Propriva             7\n",
+       "          Ramicane            20\n",
+       "          Stelasyn            11\n",
+       "          Zoniferol           14\n",
+       "\n",
+       "[100 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Generate a bar plot showing the number of mice per time point for each treatment throughout the course of the study using pandas."
+    "# Generate a bar plot showing the number of mice per time point for each treatment throughout the course of the study using pandas\n",
+    "drug_reg_time=pd.DataFrame(cleaned_combined_df.groupby(['Timepoint', 'Drug Regimen'])[\"Mouse ID\"].count())\n",
+    "\n",
+    "drug_reg_time\n",
+    "\n",
+    "\n",
+    "\n",
+    "#bp_x_axis=drug_reg_time[\"Drug Regimen\"]\n",
+    "#bp_x_axis"
    ]
   },
   {
@@ -775,7 +1057,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a bar plot showing the number of mice per time point for each treatment throughout the course of the study using pyplot."
+    "# Generate a bar plot showing the number of mice per time point for each treatment throughout the course of the study using pyplot.\n",
+    "# plot data\n",
+    "fig, ax = plt.bar(figsize=(15,7))\n",
+    "# use unstack()\n",
+    "cleaned_combined_df.groupby(['Timepoint','Drug Regimen']).count()['Mouse ID'].unstack().plot(ax=ax)"
    ]
   },
   {
